--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,16 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.17</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.jgoodies/forms -->
+		<dependency>
+		    <groupId>com.jgoodies</groupId>
+		    <artifactId>forms</artifactId>
+		    <version>1.2.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.jgoodies</groupId>
+		    <artifactId>jgoodies-forms</artifactId>
+		    <version>1.8.0</version>
+		</dependency>
 	</dependencies>
-
 </project>
