--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,12 @@
 		    <artifactId>jgoodies-forms</artifactId>
 		    <version>1.8.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.miglayout/miglayout -->
+<dependency>
+    <groupId>com.miglayout</groupId>
+    <artifactId>miglayout</artifactId>
+    <version>3.7.4</version>
+</dependency>
+
 	</dependencies>
 </project>
